deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sq1-deployment
  labels:
    app: sq1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sq1
  template:
    metadata:
      labels:
        app: sq1 
    spec:
      containers:
      - name: sq1
        image: systemtesting48/sq1:26
        ports:
        - containerPort: 80
        
        
---

apiVersion: v1
kind: Service
metadata:
  name: sq1-service
spec:
  selector:
    app: sq1 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
