Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: aabc40ac483aa4c87838e05fa2edbc01-1820942088.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /sq1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sq1-service
            port:
              number: 80
      - path: /tic-tac-toe(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tic-tac-toe-service
            port:
              number: 80
